--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         
             </ul>
           </li>
-          <li class="dropdown"><a href="#"><span>HSG Tin </span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Lê Tuấn Kiệt </span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Đăng nhập</a></li>
+          
               <li><a href="#">Thư viện đề thi học sinh giỏi</a></li>
               <li><a href="#">Lấy mã nguồn trang web</a></li>
               <li><a href="#">Thêm / sửa / xoá /xem trắc nghiệm</a></li>
